# Graphyte

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
Assets/shaders/: DepthDebug.vert  GUI.frag  GUI.vert  GUIText.frag  Grid.frag  Grid.vert  Light.vert  Lighting.frag  Lighting.vert  SimpleDepth.frag  SimpleDepth.vert  Standard.frag  Standard.vert  Unlit.frag  Unlit.vert
Assets/shaders/Editor/: ScreenShader.frag  ScreenShader.vert
Assets/shaders/Particles/: Particles.frag  Particles.geom  Particles.vert
Assets/shaders/Standard/: PBR.frag  PBR.vert  Standard.frag  Standard.vert  StandardV2.frag  StandardV2.vert
Assets/textures/: GrassTexture.psd  particle.psd
Assets/textures/Grid/: texture_diffuse.psd
include/: AudioEmitter.h  AudioListener.h  Cursor.h
shaders/: GUIText.vert  Standard.frag
source/: AudioListener.h  BehaviourScript.h  Camera.h  CameraOrbit.h  Console.cpp  GameObject.h  Graphyte.cpp  Input.h  Material.cpp  Mesh.h  MeshRenderer.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ResourceManager.h  Scene.h  Shader.cpp  TextRenderer.h  Texture.cpp  Timers.h  Transform.cpp  Transform.h
src/: BoundingBox.cpp  BoundingBox.h  ECS.h  ExtraRenderer.cpp  ExtraRenderer.h  UniformGrid.cpp  UniformGrid.h  main.cpp
src/Audio/: AudioEmitter.h  AudioListener.h
src/Cursor/: Cursor.h
src/Custom Behaviours/: CameraOrbit.h  Chunk.h  EditorCamera.h  MoveAround.h  PlayerMovement.cpp  PlayerMovement.h  WorldGenerator.cpp  WorldGenerator.h
src/Custom Components/: CameraOrbit.h  Chunk.h  EditorCamera.h  WorldGenerator.cpp  WorldGenerator.h
src/Graphyte/: Graphyte.cpp  Graphyte.h
src/IO/: ModelLoader.cpp  ModelLoader.h
src/Input/: Input.cpp  Input.h
src/Logging/: Console.cpp  Console.h
src/Math/: Math.h  PerlinNoise.h  Quaternion.h  Vector2.h  Vector3.h
src/Memory Management/: Allocator.h
src/Objects/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.cpp~RF32179ea.TMP  Scene.h  Transform.cpp  Transform.h
src/Physics/: BoundingBox.cpp  BoundingBox.h  Collider.cpp  Collider.h  Physics3D.cpp  Physics3D.h  Rigidbody.cpp  Rigidbody.h  SphereCollider.h  UniformGrid.cpp  UniformGrid.h
src/Rendering/: Camera.cpp  Camera.h  ExtraRenderer.cpp  ExtraRenderer.h  Framebuffer.cpp  Framebuffer.h  Frustrum.cpp  Frustrum.h  Lighting.cpp  Lighting.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  ShadowMap.cpp  ShadowMap.h
src/Rendering/Material/: Material.cpp  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/Scripting/: BehaviourScript.cpp  BehaviourScript.h
src/Text/: TextRenderer.cpp  TextRenderer.h
src/Time/: Timers.cpp  Timers.h
